--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
           <div class="card h-100 product-card shadow-sm">
             <div class="card-body text-center p-4">
               
-              <div class="bg-light rounded-circle d-inline-block p-4 mb-3">
+              <div class="bg-light d-inline-block p-4 mb-3">
                 <i class="bi bi-laptop fs-1 text-primary"></i>
               </div>
               
