--- a/templates/profile.html
+++ b/templates/profile.html
@@ -23,7 +23,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card border-0 shadow-sm">
                     <div class="card-body text-center p-4">
-                        <div class="bg-primary bg-opacity-10 rounded-circle p-4 d-inline-block mb-3">
+                        <div class="bg-primary bg-opacity-10 p-4 d-inline-block mb-3">
                             <i class="bi bi-person-fill fs-1 text-primary"></i>
                         </div>
                         {% if cliente %}
