--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -302,10 +302,13 @@
                         </div>
                     </div> <hr class="my-4">
 
-                    <div class="d-flex justify-content-end">
-                        <button type="reset" class="btn btn-light text-secondary border me-5 fw-bold px-2">Cancelar</button>
-                        <button type="submit" class="btn btn-primary btn-lg px-2 me-5 fw-bold shadow">
-                            <i class="bi bi-cloud-arrow-up-fill me-5"></i> Registrar y Distribuir
+                    <div class="d-flex justify-content-end align-items-center">
+                        <button type="reset" class="btn btn-sm btn-light text-secondary border me-3 fw-bold px-3">
+                            Cancelar
+                        </button>
+                        
+                        <button type="submit" class="btn btn-sm btn-primary px-3 fw-bold shadow">
+                            <i class="bi bi-cloud-arrow-up-fill me-2"></i> Registrar y Distribuir
                         </button>
                     </div>
                 </form>
